--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,8 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: UseDotNet@2
-  displayName: 'Use .Net SDK 6.x'
+- task: UseDotNet@2
+  displayName: 'Use .NET SDK 6.x'
   inputs:
     packageType: sdk
     version: '6.x'
@@ -26,7 +26,7 @@ steps:
   inputs:
     verbose: false
 
-- script:  './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
+- script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets'
 
 - task: gulp@1
@@ -48,4 +48,3 @@ steps:
     command: 'build'
     arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
-
